#add_subdirectory(./common)
#add_subdirectory(./tracker)
add_subdirectory(./storage)
#add_subdirectory(./client)
#aux_source_directory(./common COMMON_SRC)
#aux_source_directory(./tracker TRACKER_SRC)
#aux_source_directory(./storage STORAGE_SRC)
#aux_source_directory(./client CLIENT_SRC)
#
#include_directories(trunk_mgr ../common ../tracker ../client fdht_client)
#target_link_libraries(fastcommon serverframe)
#add_executable(fdfs_trackerd ${COMMON_SRC} ${TRACKER_SRC})
#add_executable(fdfs_storaged ${COMMON_SRC} ${STORAGE_SRC})
#add_executable(client ${COMMON_SRC} ${CLIENT_SRC})